!1895 fix(#I4BR3T): resolve Align not work * doc: 更新对齐示例 * feat: 修复对齐不生效问题 * feat: 修复 bool 类型默认渲染

--- a/src/BootstrapBlazor/Components/Table/Table.css
+++ b/src/BootstrapBlazor/Components/Table/Table.css
@@ -627,10 +627,20 @@ form .table .table-cell > textarea {
     background-color: transparent;
 }
 
-.table-cell.text-center input {
-    text-align: center;
+.table-cell.text-center,
+.table-cell.text-center .switch {
+    justify-content: center;
 }
 
-.table-cell.text-end input {
-    text-align: right;
+    .table-cell.text-center input {
+        text-align: center;
+    }
+
+.table-cell.text-end,
+.table-cell.text-end .switch {
+    justify-content: end;
 }
+
+    .table-cell.text-end input {
+        text-align: right;
+    }
